Bug 489697 - Replace calls to new Integer() with Integer.valueOf()
Using Integer.valueOf() instead of new Integer() not only saves
object creation (because the former uses a cached list of objects)
but also removes some method calls in the chain. Only Integer
objects that are not in the cache fall back to the Integer
constructor.

Change-Id: Ia4c2f400f8cd8f2dfd3d3741de0ee8527821a435
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>