@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2014 IBM Corporation and others.
+ * Copyright (c) 2007, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -732,7 +732,7 @@ public class ReferenceExtractor extends ClassVisitor {
 
 		void addLineInfo(int line, Label label) {
 			this.lineInfos.add(new LineInfo(line, label));
-			this.lineMap.put(label, new Integer(line));
+			this.lineMap.put(label, Integer.valueOf(line));
 		}
 
 		void addCatchLabelInfos(Reference location, Label label) {
