@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2013 IBM Corporation and others.
+ * Copyright (c) 2008, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -350,7 +350,7 @@ public class SystemApiDetector extends AbstractProblemDetector {
 					if (this.referenceEEs == null) {
 						this.referenceEEs = new HashMap<>(3);
 					}
-					this.referenceEEs.put(reference, new Integer(eeValue));
+					this.referenceEEs.put(reference, Integer.valueOf(eeValue));
 					return true;
 				}
 			}
