@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2008 IBM Corporation and others.
+ * Copyright (c) 2006, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -60,7 +60,7 @@ public class CSCategoryTrackerUtil {
 	public void associate(String id, String name, int type) {
 		fCategoryNameMap.put(name, id);
 		fCategoryIDMap.put(id, name);
-		fCategoryTypeMap.put(id, new Integer(type));
+		fCategoryTypeMap.put(id, Integer.valueOf(type));
 	}
 
 	/**
