@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2008 IBM Corporation and others.
+ *  Copyright (c) 2000, 2016 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -117,9 +117,9 @@ public class Fragment extends PluginBase implements IFragment {
 	@Override
 	public void setRule(int rule) throws CoreException {
 		ensureModelEditable();
-		Integer oldValue = new Integer(this.fMatchRule);
+		Integer oldValue = Integer.valueOf(this.fMatchRule);
 		fMatchRule = rule;
-		firePropertyChanged(P_RULE, oldValue, new Integer(rule));
+		firePropertyChanged(P_RULE, oldValue, Integer.valueOf(rule));
 	}
 
 	@Override
