@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2015 IBM Corporation and others.
+ *  Copyright (c) 2000, 2016 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -166,9 +166,9 @@ public class PluginImport extends IdentifiablePluginObject implements IPluginImp
 	@Override
 	public void setMatch(int match) throws CoreException {
 		ensureModelEditable();
-		Integer oldValue = new Integer(this.match);
+		Integer oldValue = Integer.valueOf(this.match);
 		this.match = match;
-		firePropertyChanged(P_MATCH, oldValue, new Integer(match));
+		firePropertyChanged(P_MATCH, oldValue, Integer.valueOf(match));
 	}
 
 	@Override
