@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2015 Code 9 Corporation and others.
+ * Copyright (c) 2008, 2016 Code 9 Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -81,7 +81,7 @@ public class PluginConfiguration extends ProductObject implements IPluginConfigu
 		int oldValue = fStartLevel;
 		fStartLevel = startLevel;
 		if (isEditable() && oldValue != fStartLevel)
-			firePropertyChanged(P_START_LEVEL, new Integer(oldValue), new Integer(fStartLevel));
+			firePropertyChanged(P_START_LEVEL, Integer.valueOf(oldValue), Integer.valueOf(fStartLevel));
 	}
 
 	@Override
